<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConnexionFragment">

    <ImageView
        android:id="@+id/socialBanner"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.2"
        android:src="@drawable/twitter"
        android:layout_marginHorizontal="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/emailField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:layout_marginHorizontal="32dp"
        android:layout_marginVertical="32dp"
        app:layout_constraintBottom_toTopOf="@+id/passwordField" />

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/mot_de_passe"
        android:inputType="textPassword"
        android:layout_marginHorizontal="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/connexionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/connexion"
        android:layout_marginHorizontal="32dp"
        android:layout_marginVertical="32dp"
        app:layout_constraintTop_toBottomOf="@+id/passwordField" />
</androidx.constraintlayout.widget.ConstraintLayout>